# agilizedmc

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
agilizedmc/: __init__.py  cli.py  copymysql.sh  db.py  getcalendar.py  tunnel.py  upload_file.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_agilizedmc.py
