[tool.poetry]
name = "agilizedmc"
version = "0.1.0"
description = "Um projeto de gestão de bancos de dados do DDMC"
authors = ["João Tedeschi <joaorafaelbt@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "0.10.0"
pyarrow = "^15.0.2"
pyyaml = "^6.0.1"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
click = "^8.1.7"
paramiko = "^3.4.0"
sshtunnel = "^0.4.0"
requests = "^2.31.0"
google-api-python-client = "^2.132.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
